# tkxlib

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.local.json
samples/: sample1.py
tkxlib/: __init__.py  dice.py  dice.pyi  disp_image.py  disp_image.pyi  kbinput.py  kbinput.pyi
tkxlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tkxlib/.claude/: settings.local.json
