[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkxlib"
version = "1.1.0"
description = "Tkinter image animation and keyboard input helpers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "k-webs" }]
dependencies = [
    "Pillow>=10.0.0",
]
keywords = ["tkinter", "image", "keyboard", "dice" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/kawaba/tkxlib"
Download = "https://github.com/kawaba/tkxlib/archive/refs/heads/main.zip"

[tool.setuptools]
packages = ["tkxlib"]
include-package-data = true

[tool.setuptools.package-data]
tkxlib = ["img/*.png"]
