[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkxlib"
version = "2.0.1"
description = "Tkinter image animation and keyboard input helpers"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
authors = [{ name = "Takashi Kawaba", email = "kawaba@tk-webs.com" }]
dependencies = [
    "Pillow>=10.0.0",
]
keywords = ["tkinter", "image", "keyboard", "dice" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/kawaba/tkxlib"
Download = "https://github.com/kawaba/tkxlib/archive/refs/heads/main.zip"

[tool.setuptools]
packages = ["tkxlib"]
include-package-data = true

[tool.setuptools.package-data]
tkxlib = ["py.typed", "*.pyi", "img/*.png"]
